08 Apr 2002 (RESCINDED): display_version via stdout instead of stderr;
            set stdout/stderr to unbuffered (if externalgui) instead - Fish
08 Apr 2002 RC file handling: 1) new 'pause nnn' .rc-file-only command
            to sleep for 1-999 seconds, 2) accept and display comments
            from either the keyboard or the .rc file, 3) control .rc file
            comments logging via new "&comments on|off" .rc-file-command,
            4) use buffered "fgets" call to read .rc file for efficiency,
            5) silently ignore CR's in .rc file for Windows compatibility,
            6) prefix logged commands from .rc file with "> ". -- Fish
08 Apr 2002 parse_args (config.c): 1) not EXTERNALGUI dependent,
            2) support embedded quoted strings (sf="path") - Fish
08 Apr 2002 Update message buffer in exgui mode - Jan Jaeger
05 Apr 2002 Support cookies to save settings - Jan Jaeger
02 Apr 2002 hercload.html updated for cckd utility support - Greg Smith
28 Mar 2002 HTTP server - Jan Jaeger
24 Mar 2002 Fix ADRFMT definition in cmspc.c - Bernard van der Helm
21 Mar 2002 Fix MVPG so it works with Expanded Storage - Paul Leisy
20 Mar 2002 Sequential files now supported by dasdload.c - Greg Smith
17 Mar 2002 Fix Read-Configuration-Data and Sense-ID CIW - Greg Smith
17 Mar 2002 Common DASD tables (dasdtab.c & dasdtab.h) - Greg Smith
17 Mar 2002 DASD utilities cckd support - Greg Smith
16 Mar 2002 Fixed benign warnings in ctcadpt.c & un-tabbed file - Fish
15 Mar 2002 Fixed automagic for building standalone dasd utilities - Volker Bandke
09 Mar 2002 Lan Channel Station (LCS) support
09 Mar 2002 Initial cckd dasd utilities support - Greg Smith
07 Mar 2002 More service signal updates for AO support - Jan Jaeger
05 Mar 2002 Add test_lock macro and enhance ipending
            command with lock status on various locks - Jan Jaeger
05 Mar 2002 Merge sigpbusy into sigplock - Jan Jaeger
05 Mar 2002 Allow print to pipe for Win32 (future print spooling) - Fish