@@ -1,3 +1,5 @@
+08 Apr 2002 "&comments on|off" logic deleted; '*' now "talking" comments,
+            '#' now silent comments (per Willem's suggestion). - Fish
 08 Apr 2002 (RESCINDED): display_version via stdout instead of stderr;
             set stdout/stderr to unbuffered (if externalgui) instead - Fish
 08 Apr 2002 RC file handling: 1) new 'pause nnn' .rc-file-only command
